--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: asu_wp_s
+Theme Name: jrnopswp
 Theme URI: http://github.com/cronkiteschool/
 Author: Cronkite School IT
 Author URI: http://automattic.com/
@@ -7,13 +7,13 @@ Description: A theme based on <code>_s</code>, or <em>underscores</em>.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: asu_wp_s
+Text Domain: jrnopswp
 Tags:
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-asu_wp_s is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+jrnopswp is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
