--- a/style.css
+++ b/style.css
@@ -270,7 +270,8 @@ button,
 input,
 select,
 textarea {
-	color: #404040;
+	color: #2a2a2a;
+	font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.5;
@@ -283,6 +284,9 @@ h4,
 h5,
 h6 {
 	clear: both;
+	color: black;
+	font-family: inherit;
+	font-weight: normal;
 }
 
 p {
@@ -494,17 +498,15 @@ textarea {
 5.1 Links
 --------------------------------------------------------------*/
 a {
-	color: royalblue;
-}
-
-a:visited {
-	color: purple;
+	color: #903;
+	font-weight: normal;
 }
 
 a:hover,
 a:focus,
 a:active {
-	color: midnightblue;
+	color: #d23153;
+	text-decoration: none;
 }
 
 a:focus {
@@ -520,6 +522,9 @@ a:active {
 5.2 Menus
 --------------------------------------------------------------*/
 .main-navigation {
+	background-color: #353535;
+	border: 0;
+	border-radius: 0;
 	clear: both;
 	display: block;
 	float: left;
@@ -527,6 +532,7 @@ a:active {
 }
 
 .main-navigation ul {
+	background-color: #353535;
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
@@ -538,6 +544,12 @@ a:active {
 }
 
 .main-navigation a {
+	background-color: transparent;
+	color: #ededed;
+	font-size: 16px;
+	font-weight: bold;
+	line-height: 1;
+	padding: 20px;
 	display: block;
 	text-decoration: none;
 }
@@ -571,6 +583,8 @@ a:active {
 }
 
 .main-navigation ul ul a:hover {
+	background-color: black;
+	color: #fff;
 }
 
 .main-navigation ul li:hover > ul {
@@ -712,6 +726,7 @@ a:active {
 9.0 Widgets
 --------------------------------------------------------------*/
 .widget {
+	color: #903;
 	margin: 0 0 1.5em;
 }
 
@@ -725,6 +740,54 @@ a:active {
 	display: none;
 }
 
+.widget ul {
+	list-style: none;
+	padding-left: 0;
+}
+
+.widget ul li {
+	border: 0;
+	border-top: 1px solid #d7d7d7;
+	color: #903;
+	font-weight: 400;
+	list-style: none;
+	padding: 10px 5px;
+}
+
+.widget ul li a {
+	border-bottom: 0;
+}
+
+.widget ul li:hover {
+	background-color: #f5f5f5;
+	text-decoration: none;
+}
+
+.widget-area {
+	background-color: #fff;
+	border-top: 8px solid #903;
+	margin-bottom: 24px;
+	padding: 30px;
+	position: relative;
+}
+
+.widget-area:before {
+	border-bottom: 1px solid #e9e9e9;
+	border-left: 1px solid #e9e9e9;
+	border-right: 1px solid #e9e9e9;
+	content: '';
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 0;
+}
+
+.widget-area :last-child {
+	margin-bottom: 0;
+}
+
 /*--------------------------------------------------------------
 10.0 Content
 --------------------------------------------------------------*/
@@ -736,6 +799,7 @@ a:active {
 }
 
 .hentry {
+	background-color: #f5f5f5;
 	margin: 0 0 1.5em;
 }
 
@@ -760,6 +824,13 @@ a:active {
 	margin: 0 0 1.5em;
 }
 
+article.post {
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #b7b7b7;
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
 /*--------------------------------------------------------------
 10.2 Asides
 --------------------------------------------------------------*/
@@ -777,6 +848,11 @@ a:active {
 
 .bypostauthor {
 	display: block;
+}
+
+.entry-content tr.odd td,
+.comment-content tr.odd td {
+	background-color: #fafafa;
 }
 
 /*--------------------------------------------------------------
@@ -816,6 +892,7 @@ object {
 12.1 Captions
 --------------------------------------------------------------*/
 .wp-caption {
+	background: #fff;
 	margin-bottom: 1.5em;
 	max-width: 100%;
 }
@@ -882,3 +959,33 @@ object {
 .gallery-caption {
 	display: block;
 }
+
+/*--------------------------------------------------------------
+13.0 Layout
+--------------------------------------------------------------*/
+
+.site-content {
+	min-height: 1px;
+	padding-left: 15px;
+	padding-right: 15px;
+	margin-top:24px;
+}
+.content-area {
+	float: right;
+	margin: 0 0 0 -20%;
+	width: 100%;
+	padding-left: 30px;
+}
+.site-main {
+	margin: 0 0 0 20%;
+}
+.site-content .widget-area {
+	float: left;
+	overflow: hidden;
+	width: 20%;
+}
+.site-footer {
+	clear: both;
+	width: 100%;
+}
+
