--- a/style.css
+++ b/style.css
@@ -984,6 +984,25 @@ object {
 	overflow: hidden;
 	width: 20%;
 }
+@media screen and (max-width: 600px) {
+	.site-content {
+		min-height: 1px;
+		padding-left: 0;
+		padding-right: 0;
+		margin-top: 0;
+	}
+	.content-area {
+		padding-left: 0;
+	}
+	.site-main {
+		margin: 0 0 0 0;
+	}
+	.site-content .widget-area {
+		float: left;
+		width: 100%;
+	}
+}
+
 .site-footer {
 	clear: both;
 	width: 100%;
