--- a/style.css
+++ b/style.css
@@ -527,7 +527,8 @@ a:active {
 /*--------------------------------------------------------------
 5.2 Menus
 --------------------------------------------------------------*/
-.main-navigation {
+#navigation {
+	position: relative;
 	background-color: #353535;
 	border: 0;
 	border-radius: 0;
@@ -535,6 +536,12 @@ a:active {
 	display: block;
 	float: left;
 	width: 100%;
+}
+
+.main-navigation {
+	position: relative;
+	z-index: 10;
+	padding-left: 70px;
 }
 
 .main-navigation ul {
@@ -1147,4 +1154,69 @@ object {
 	#site-name-desktop {
         display: none;
 	}
+}
+
+#search {
+	position: absolute;
+    /*top: 0;*/
+    /*left: 0;*/
+    /*width: 60px;*/
+    /*height: 60px;*/
+}
+#label {
+    /*width: 60px;*/
+    /*height: 60px;*/
+    position: relative;
+    z-index: 20;
+}
+#label label {
+    display: block;
+    /*width: 60px;*/
+    /*height: 60px;*/
+    /*background: url("../img/search.png") 0 0;*/
+    color: #ededed;
+    /*text-indent: -9999px;*/
+    cursor: pointer;
+}
+#label label:hover {
+    /*background: url("../img/search.png") -60px 0*/
+}
+#label.active label {
+    /*background: url("../img/search.png") -60px 0*/
+}
+#input {
+	position: absolute;
+    top: 0;
+    left: 60px;
+    width: 450px;
+    height: 60px;
+    z-index: 5;
+    overflow: hidden;
+}
+#input input {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: -450px;
+    width: 450px;
+    height: 100%;
+    margin: 0;
+    padding: 0 10px;
+    border: none;
+    background-color: #f5f5f5;
+    color: #666;
+    font-size: .8em;
+    backface-visibility: none;
+    border-radius: 0;
+    transition: left 0;
+}
+#input input:focus {
+    outline: none
+}
+#input.focus {
+    z-index: 20
+}
+#input.focus input {
+    left: 0;
+    transition: left 0.3s;
 }
