--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 5.0 Navigation
 	5.1 Links
 	5.2 Menus
+	5.3 Search
 6.0 Accessibility
 7.0 Alignments
 8.0 Clearings
@@ -541,7 +542,6 @@ a:active {
 .main-navigation {
 	position: relative;
 	z-index: 10;
-	padding-left: 2em;
 }
 
 .main-navigation ul {
@@ -683,6 +683,71 @@ a:active {
 	float: right;
 	text-align: right;
 	width: 50%;
+}
+
+/*--------------------------------------------------------------
+5.3 Search
+--------------------------------------------------------------*/
+#search-handheld {
+	display: none;
+	position: absolute;
+    line-height: 1;
+    padding: .5em .5em;
+}
+#label-handheld {
+    position: relative;
+    z-index: 20;
+}
+#label-handheld label {
+    display: block;
+    color: #ededed;
+    cursor: pointer;
+}
+#label-handheld label:hover {
+}
+#label-handheld.active label {
+}
+#input-handheld {
+	position: absolute;
+    top: 0;
+    left: 2em;
+    width: 450px;
+    height: 3em;
+    z-index: 5;
+    overflow: hidden;
+}
+#input-handheld input {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: -450px;
+    width: 450px;
+    height: 100%;
+    margin: 0;
+    padding: 0 1em;
+    border: none;
+    background-color: #f5f5f5;
+    color: #666;
+    font-size: .8em;
+    backface-visibility: none;
+    border-radius: 0;
+    transition: left 0;
+}
+#input-handheld input:focus {
+    outline: none
+}
+#input-handheld.focus {
+    z-index: 20
+}
+#input-handheld.focus input {
+    left: 0;
+    transition: left 0.3s;
+}
+
+@media handheld, only screen and (max-width: 600px) {
+	#search-handheld {
+		display: inline-block;
+	}
 }
 
 /*--------------------------------------------------------------
@@ -1117,10 +1182,8 @@ object {
   max-width: 300px;
 }
 
-.site-branding, .site-name-little {
+.site-branding, .site-name-handheld {
 	white-space: nowrap;
-	/*overflow: hidden;*/
-	/*text-overflow: clip*/
 }
 #site-name-desktop h1 {
   line-height: 1em;
@@ -1143,12 +1206,13 @@ object {
 #site-name-desktop h1.site-title a:hover, #site-name-desktop h1.site-title a:focus {
   text-decoration: underline;
 }
-#site-name-little {
+#site-name-handheld {
 	display: none;
+	padding-left: 2.5em;
 }
 
 @media handheld, only screen and (max-width: 600px) {
-	#site-name-little {
+	#site-name-handheld {
 		display: inline-block;
 	}
 	#site-name-desktop {
@@ -1156,69 +1220,3 @@ object {
 	}
 }
 
-#search {
-	position: absolute;
-    /*top: 0;*/
-    /*left: 0;*/
-    /*width: 60px;*/
-    /*height: 60px;*/
-    line-height: 1;
-    padding: .5em .5em;
-}
-#label {
-    /*width: 60px;*/
-    /*height: 60px;*/
-    position: relative;
-    z-index: 20;
-}
-#label label {
-    display: block;
-    /*width: 60px;*/
-    /*height: 60px;*/
-    /*background: url("../img/search.png") 0 0;*/
-    color: #ededed;
-    /*text-indent: -9999px;*/
-    cursor: pointer;
-}
-#label label:hover {
-    /*background: url("../img/search.png") -60px 0*/
-}
-#label.active label {
-    /*background: url("../img/search.png") -60px 0*/
-}
-#input {
-	position: absolute;
-    top: 0;
-    left: 2em;
-    width: 450px;
-    height: 3em;
-    z-index: 5;
-    overflow: hidden;
-}
-#input input {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: -450px;
-    width: 450px;
-    height: 100%;
-    margin: 0;
-    padding: 0 1em;
-    border: none;
-    background-color: #f5f5f5;
-    color: #666;
-    font-size: .8em;
-    backface-visibility: none;
-    border-radius: 0;
-    transition: left 0;
-}
-#input input:focus {
-    outline: none
-}
-#input.focus {
-    z-index: 20
-}
-#input.focus input {
-    left: 0;
-    transition: left 0.3s;
-}
