--- a/style.css
+++ b/style.css
@@ -1090,20 +1090,9 @@ object {
 	padding-right: .5em;
 	margin-top: 1em;
 }
-/*.content-area {*/
-	/*float: right;*/
-	/*margin: 0 0 0 -25%;*/
-	/*width: 100%;*/
-	/*padding-left: 1em;*/
-/*}*/
-/*.site-main {*/
-	/*margin: 0 0 0 25%;*/
-/*}*/
-/*.site-content .widget-area {*/
-	/*float: left;*/
-	/*overflow: hidden;*/
-	/*width: 25%;*/
-/*}*/
+.content-area {
+	padding-left: 1em;
+}
 @media screen and (max-width: 600px) {
 	.site-content {
 		min-height: 1px;
@@ -1136,6 +1125,9 @@ object {
 }
 .site-info .contact-link:hover, .site-info .contact-link:focus {
   color: #fff;
+}
+.site-info h2 {
+  color: #a9a9a9;
 }
 .site-info ul,
 .site-info ol {
@@ -1171,7 +1163,7 @@ object {
 }
 .site-info .contact-info {
   float: left;
-  width: 20%;
+  width: 25%;
   margin-left: 2em;
 }
 .site-info {
