--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Navigation
 	## Links
 	## Menus
-	## Search
 # Accessibility
 # Alignments
 # Clearings
@@ -43,6 +42,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Media
 	## Captions
 	## Galleries
+# Layout
+	## Site Branding
+	## Search
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
@@ -686,72 +688,6 @@ a:active {
 	text-align: right;
 	width: 50%;
 }
-
-/*--------------------------------------------------------------
-## Search
---------------------------------------------------------------*/
-#search-handheld {
-	display: inline-block;
-	position: absolute;
-    line-height: 1;
-    padding: .5em .5em;
-}
-#label-handheld {
-    position: relative;
-    z-index: 20;
-}
-#label-handheld label {
-    display: block;
-    color: #ededed;
-    cursor: pointer;
-}
-#label-handheld label:hover {
-}
-#label-handheld.active label {
-}
-#input-handheld {
-	position: absolute;
-    top: 0;
-    left: 2em;
-    width: 450px;
-    height: 3em;
-    z-index: 5;
-    overflow: hidden;
-}
-#input-handheld input {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: -450px;
-    width: 450px;
-    height: 100%;
-    margin: 0;
-    padding: 0 1em;
-    border: none;
-    background-color: #f5f5f5;
-    color: #666;
-    font-size: .8em;
-    backface-visibility: none;
-    border-radius: 0;
-    transition: left 0;
-}
-#input-handheld input:focus {
-    outline: none
-}
-#input-handheld.focus {
-    z-index: 20
-}
-#input-handheld.focus input {
-    left: 0;
-    transition: left 0.3s;
-}
-
-@media screen and (min-width: 37.5em) {
-	#search-handheld {
-		display: none;
-	}
-}
-
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
@@ -889,7 +825,7 @@ a:active {
 }
 
 .widget-area {
-	background-color: #fff;
+	/*background-color: #fff;*/
 	border-top: .5em solid #903;
 	margin-bottom: .5em;
 	padding: 1em;
@@ -912,6 +848,11 @@ a:active {
 .widget-area :last-child {
 	margin-bottom: 0;
 }
+
+#secondary aside {
+	position:relative;
+}
+
 
 /*--------------------------------------------------------------
 # Content
@@ -1088,6 +1029,41 @@ object {
 /*--------------------------------------------------------------
 # Layout
 --------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Site Branding
+--------------------------------------------------------------*/
+.site-info {
+  background-color: #1e1e1e;
+  padding-top: 1em;
+  padding-bottom: .5em;
+}
+.site-info img {
+  max-width: 300px;
+}
+.site-info h2 {
+  color: #a9a9a9;
+}
+.site-info ul,
+.site-info ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.site-info ul > li > a,
+.site-info ol > li > a {
+  position: relative;
+  text-decoration: none;
+}
+.site-info ul > li > a:hover, .site-info ul > li > a:focus,
+.site-info ol > li > a:hover,
+.site-info ol > li > a:focus {
+  text-decoration: none;
+}
+.site-info .contact-info {
+  float: left;
+  width: 45%;
+  margin: 0 2em;
+}
 .site-info .phone-link, .site-info address {
   border-bottom-color: #ccc;
   color: #ccc;
@@ -1102,26 +1078,6 @@ object {
 .site-info .contact-link:hover, .site-info .contact-link:focus {
   color: #fff;
 }
-.site-info h2 {
-  color: #a9a9a9;
-}
-.site-info ul,
-.site-info ol {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.site-info ul > li > a,
-.site-info ol > li > a {
-  position: relative;
-  text-decoration: none;
-}
-.site-info ul > li > a:hover, .site-info ul > li > a:focus,
-.site-info ol > li > a:hover,
-.site-info ol > li > a:focus {
-  text-decoration: none;
-}
 .site-info .social-media > li {
   float: left;
 }
@@ -1129,26 +1085,13 @@ object {
   border-bottom: 0;
   color: #a9a9a9;
   font-size: 2rem;
-  margin-right: 10px;
+  margin-right: .2em;
 }
 .site-info .social-media > li > a:hover, .site-info .social-media > li > a:focus {
   color: #fff;
 }
 .site-info .social-media > li:last-child > a {
   margin-right: 0;
-}
-.site-info .contact-info {
-  float: left;
-  width: 25%;
-  margin-left: 2em;
-}
-.site-info {
-  background-color: #1e1e1e;
-  padding-top: 1em;
-  padding-bottom: .6em;
-}
-.site-info img {
-  max-width: 300px;
 }
 .site-branding, .site-name-handheld {
 	white-space: nowrap;
@@ -1189,3 +1132,74 @@ object {
         display: inline;
 	}
 }
+.widget-area-footer {
+	margin-bottom: .5em;
+	padding: 1em;
+	position: relative;
+}
+
+/*--------------------------------------------------------------
+## Search
+--------------------------------------------------------------*/
+#search-handheld {
+	display: inline-block;
+	position: absolute;
+    line-height: 1;
+    padding: .5em .5em;
+}
+#label-handheld {
+    position: relative;
+    z-index: 20;
+}
+#label-handheld label {
+    display: block;
+    color: #ededed;
+    cursor: pointer;
+}
+#label-handheld label:hover {
+}
+#label-handheld.active label {
+}
+#input-handheld {
+	position: absolute;
+    top: 0;
+    left: 2em;
+    width: 450px;
+    height: 3em;
+    z-index: 5;
+    overflow: hidden;
+}
+#input-handheld input {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: -450px;
+    width: 450px;
+    height: 100%;
+    margin: 0;
+    padding: 0 1em;
+    border: none;
+    background-color: #f5f5f5;
+    color: #666;
+    font-size: .8em;
+    backface-visibility: none;
+    border-radius: 0;
+    transition: left 0;
+}
+#input-handheld input:focus {
+    outline: none
+}
+#input-handheld.focus {
+    z-index: 20
+}
+#input-handheld.focus input {
+    left: 0;
+    transition: left 0.3s;
+}
+
+@media screen and (min-width: 37.5em) {
+	#search-handheld {
+		display: none;
+	}
+}
+
