--- a/style.css
+++ b/style.css
@@ -885,6 +885,10 @@ a:active {
 	margin: 1.5em 0 0;
 }
 
+.entry-footer span {
+	margin: 0 .5em 0 0;
+}
+
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
