Change toggle selector for header menu.
Wasn't working before.

--- a/style.css
+++ b/style.css
@@ -640,8 +640,8 @@ a:active {
 
 /* Small menu. */
 .menu-toggle, 
-.main-navigation.toggled ul {
-	display: inline:;
+.main-navigation.toggled > ul {
+	display: inline;
 }
 
 .main-navigation button {
