--- a/style.css
+++ b/style.css
@@ -569,7 +569,7 @@ a:active {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	float: left;
 	position: absolute;
-	top: 1.5em;
+	top: 2.4em;
 	left: -999em;
 	z-index: 99999;
 }
@@ -616,7 +616,7 @@ a:active {
 .main-navigation .current_page_ancestor > a {
 }
 
-.main-navigation > ul > li > a:hover {
+.main-navigation ul > li > a:hover {
   background-color: black;
   color: #ffb310;
 }
