--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ Theme URI: http://github.com/cronkiteschool/
 Author: Cronkite School IT
 Author URI: http://automattic.com/
 Description: A theme based on <code>_s</code>, or <em>underscores</em>.
-Version: 1.1.6
+Version: 1.1.7
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: asu_s
-Tags:
+Tags: black, white, maroon, gold, grey, one-column, two-columns,full-width-template,  right-sidebar, left-sidebar, flexible-width, theme-options, custom-menu, responsive-layout
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
@@ -244,6 +244,8 @@ fieldset {
 }
 
 legend {
+	font-size: 24px;
+	margin-bottom: 24px;
 	border: 0;
 	padding: 0;
 }
@@ -274,10 +276,12 @@ button,
 input,
 select,
 textarea {
-	color: #404040;
+	font-family: Roboto,"Helvetica Neue",Helvetica,Arial, sans-serif;
+	color: #2a2a2a;
 	font-size: 16px;
 	font-size: 1rem;
-	line-height: 1.5;
+	line-height: 1.44;
+	font-weight: 200;
 }
 
 h1,
@@ -286,11 +290,16 @@ h3,
 h4,
 h5,
 h6 {
+	color: black;
+	font-family: inherit;
+	font-weight: normal;
 	clear: both;
 }
 
 p {
-	margin-bottom: 1.5em;
+	line-height: 1.5em;
+	margin: 0 0 1.5em;
+	font-weight: 200;
 }
 
 dfn,
@@ -306,27 +315,49 @@ blockquote {
 
 address {
 	margin: 0 0 1.5em;
+	font-weight: 200;
+	line-height: 1.44;
+}
+
+address strong {
+  font-weight: normal;
 }
 
 pre {
-	background: #eee;
-	font-family: "Courier 10 Pitch", Courier, monospace;
-	font-size: 15px;
-	font-size: 0.9375rem;
-	line-height: 1.6;
-	margin-bottom: 1.6em;
+	display: block;
+	word-break: break-all;
+	word-wrap: break-word;
+	color: #333333;
+	background-color: whitesmoke;
+	border: 1px solid #cccccc;
+	border-radius: 4px;
+	font-size: .8em;
+	line-height: 1.44;
+	margin: 0 0 .7em;
 	max-width: 100%;
 	overflow: auto;
-	padding: 1.6em;
+	padding: .6em;
+}
+
+pre code {
+	padding: 0;
+	font-size: inherit;
+	color: inherit;
+	white-space: pre-wrap;
+	background-color: transparent;
+	border-radius: 0;
 }
 
 code,
 kbd,
 tt,
 var {
-	font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-	font-size: 15px;
-	font-size: 0.9375rem;
+	font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
+	padding: 2px 4px;
+	font-size: 90%;
+	color: #c7254e;
+	background-color: #f9f2f4;
+	border-radius: 4px;
 }
 
 abbr,
@@ -375,10 +406,9 @@ q {
 }
 
 hr {
-	background-color: #ccc;
-	border: 0;
-	height: 1px;
-	margin-bottom: 1.5em;
+  border-top: 1px solid #b7b7b7;
+  margin-bottom: 1.5em;
+  margin-top: 1.5em;
 }
 
 ul,
@@ -426,14 +456,12 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
+	border-color: #b0b0b0;
 	border-radius: 3px;
-	background: #e6e6e6;
+	background: #f5f5f5;
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
-	font-size: 12px;
-	font-size: 0.75rem;
-	line-height: 1;
+	color: #505050;
+	line-height: 1.44;
 	padding: .6em 1em .4em;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 }
@@ -442,7 +470,9 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-	border-color: #ccc #bbb #aaa;
+	background-color: gainsboro;
+	border-color: 919191;
+	color: #505050;
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
 }
 
@@ -454,7 +484,9 @@ button:active,
 input[type="button"]:active,
 input[type="reset"]:active,
 input[type="submit"]:active {
-	border-color: #aaa #bbb #bbb;
+	background-color: gainsboro;
+	border-color: 919191;
+	color: #505050;
 	box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
 }
 
@@ -464,7 +496,6 @@ input[type="url"],
 input[type="password"],
 input[type="search"],
 textarea {
-	color: #666;
 	border: 1px solid #ccc;
 	border-radius: 3px;
 }
@@ -475,7 +506,7 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 input[type="search"]:focus,
 textarea:focus {
-	color: #111;
+	color: #505050;
 }
 
 input[type="text"],
@@ -486,9 +517,32 @@ input[type="search"] {
 	padding: 3px;
 }
 
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="month"] {
+  line-height: 2em;
+  line-height: 1.44 \0;
+}
+
 textarea {
 	padding-left: 3px;
 	width: 100%;
+}
+
+legend {
+	font-size: 1.5em;
+	margin-bottom: 1.5em;
+}
+
+label {
+  font-size: .75em;
+  font-weight: normal;
+}
+
+output {
+  color: #505050;
+  line-height: 1.44;
 }
 
 /*--------------------------------------------------------------
@@ -500,26 +554,29 @@ textarea {
 a {
 	color: #903;
 	font-weight: normal;
+	text-decoration: none;
 }
 
 a:visited {
 	color: #903;
 }
 
-a:hover,
-a:focus,
-a:active {
+.site-content a {
+	border-bottom: 1px dotted #903;
+}
+
+.site-content a:hover,
+.site-content a:focus,
+.site-content a:active {
 	color: #d23153;
+	/*border-bottom: 1px dotted #d23153;*/
 	text-decoration: none;
 }
-
-a:focus {
-	outline: thin dotted;
-}
-
-a:hover,
-a:active {
-	outline: 0;
+.entry-title a,
+.entry-title a:hover,
+.entry-title a:focus,
+.entry-title a:active {
+	border-bottom:0
 }
 
 /*--------------------------------------------------------------
@@ -887,7 +944,7 @@ a:active {
 }
 
 article.post {
-  background-color: #f5f5f5;
+  background-color: #f1f1f1;
   border-bottom: 1px solid #b7b7b7;
   margin-bottom: 10px;
   padding: 20px;
@@ -1197,5 +1254,9 @@ object {
 	#search-handheld {
 		display: none;
 	}
+}
+
+.tag {
+	color:#008
 }
 
