--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -1,20 +1,28 @@
 $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
-$color__background-hr: #ccc;
-$color__background-button: #e6e6e6;
-$color__background-pre: #eee;
+$color__background-hr: $color__background-body;
+$color__background-button: #f5f5f5;
+$color__background-button-hover: gainsboro;
+$color__background-button-focus: $color__background-button-hover;
+$color__background-pre: whitesmoke;
+$color__background-code: #f9f2f4;
+$color__background-navigation: #353535;
 $color__background-ins: #fff9c0;
 
+$color__text-main: #2a2a2a;
 $color__text-screen: #21759b;
-$color__text-input: #666;
-$color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
+$color__text-input: $color__text-main;
+$color__text-input-focus: #505050;
+$color__link: #903;
+$color__link-visited: #903;
+$color__link-hover: #d23153;
+$color__text-pre: #333333;
+$color__text-code: #c7254e;
 
-$color__border-button: #ccc #ccc #bbb;
-$color__border-button-hover: #ccc #bbb #aaa;
-$color__border-button-focus: #aaa #bbb #bbb;
+$color__border-hr-top: #b7b7b7;
+$color__border-button: #b0b0b0;
+$color__border-button-hover: #919191;
+$color__border-button-focus: $color__border-button-hover;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+$color__border-pre: #cccccc;
