--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -22,10 +22,9 @@ blockquote, q {
 }
 
 hr {
-	background-color: $color__background-hr;
-	border: 0;
-	height: 1px;
+	border-top: 1px solid $color__border-hr-top;
 	margin-bottom: 1.5em;
+	margin-top: 1.5em;
 }
 
 @import "lists";
