--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -1,6 +1,8 @@
 .wp-caption {
 	margin-bottom: 1.5em;
 	max-width: 100%;
+	background: #fff;
+	max-width: 100%;
 
 	img[class*="wp-image-"] {
 		@include center-block;
