--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -14,3 +14,8 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+## Site Branding
+--------------------------------------------------------------*/
+@import "primary/_site-branding";
