--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -3,6 +3,7 @@
 }
 
 .hentry {
+	background-color: #f5f5f5;
 	margin: 0 0 1.5em;
 }
 
@@ -22,7 +23,23 @@
 	margin: 1.5em 0 0;
 }
 
+.entry-footer span {
+  font-size: .8em;
+  margin: 0 5px 0 0;
+}
+
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
+}
+
+article.post {
+  background-color: #f1f1f1;
+  border-bottom: 1px solid $color__border-hr-top;
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.entry-content tr.odd td, .comment-content tr.odd td {
+  background-color: #fafafa;
 }
