--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -1,5 +1,5 @@
 .widget {
-	margin: 0 0 1.5em;
+	color: $color__link;
 
 	/* Make sure select elements fit in widgets. */
 	select {
@@ -8,6 +8,64 @@
 }
 
 /* Search widget. */
-.widget_search .search-submit {
-	display: none;
+
+.widget_search {
+  display: none;
+  .search-submit {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 37.5em) {
+  .widget_search {
+    display: inline;
+  }
+}
+
+.widget ul {
+  list-style: none;
+  margin: auto;
+  padding-left: 0;
+  li {
+    border: 0;
+    border-top: 1px solid #d7d7d7;
+    color: #903;
+    font-weight: 400;
+    list-style: none;
+    padding: 10px 5px;
+    a {
+      border-bottom: 0;
+    }
+    &:hover {
+      background-color: #f5f5f5;
+      text-decoration: none;
+    }
+  }
+}
+
+.widget-area {
+  /*background-color: #fff;*/
+  border-top: .5em solid #903;
+  margin-bottom: .5em;
+  padding: 1em;
+  position: relative;
+  &:before {
+    border-bottom: 1px solid #e9e9e9;
+    border-left: 1px solid #e9e9e9;
+    border-right: 1px solid #e9e9e9;
+    content: '';
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 0;
+  }
+  :last-child {
+    margin-bottom: 0;
+  }
+}
+
+#secondary aside {
+  position: relative;
 }
