--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,19 +1,20 @@
 /*
 Theme Name: asu_s
-Theme URI: http://underscores.me/
-Author: Automattic
+Theme URI: http://github.com/cronkiteschool/
+Author: Cronkite School IT
 Author URI: http://automattic.com/
-Description: Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.
-Version: 1.0.0
+Description: A theme based on <code>_s</code>, or <em>underscores</em>.
+Version: 1.1.8
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: asu_s
-Tags:
+Tags: black, white, maroon, gold, grey, one-column, two-columns,full-width-template,  right-sidebar, left-sidebar, flexible-width, theme-options, custom-menu, responsive-layout
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-asu_s is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+_s is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
@@ -29,6 +30,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Navigation
 	## Links
 	## Menus
+	## Search
 # Accessibility
 # Alignments
 # Clearings
@@ -37,11 +39,13 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
     ## Posts and pages
 	## Asides
 	## Comments
+	## Site Branding
 # Infinite scroll
 # Media
 	## Captions
 	## Galleries
 --------------------------------------------------------------*/
+
 @import "variables-site/variables-site";
 @import "mixins/mixins-master";
 
