--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -1,3 +1,11 @@
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	color: black;
+	font-family: inherit;
+	font-weight: normal;
 	clear: both;
 }
