--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -3,10 +3,11 @@ button,
 input,
 select,
 textarea {
-	color: $color__text-main;
 	font-family: $font__main;
+	color: $color__text-main;
 	@include font-size(1);
 	line-height: $font__line-height-body;
+	font-weight: $font__weight-body;
 }
 
 @import "headings";
