--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 /*
 Theme Name: asu_s
-Theme URI: http://github.com/cronkiteschool/
+Theme URI: https://github.com/cronkiteschool/asu_s_wordpress_theme
 Author: Cronkite School IT
-Author URI: http://automattic.com/
-Description: A theme based on <code>_s</code>, or <em>underscores</em>.
+Author URI: https://jrnops.jmc.asu.edu
+Description: An ASU Standards inspired theme based on <code>_s</code>, or <em>underscores</em>.
 Version: 1.1.9
+GitHub Theme URI: https://github.com/cronkiteschool/asu_s_wordpress_theme
+GitHub Branch: master
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: asu_s
