Change color variables to color name.
Use color names for color variables.  Names taken from http://chir.ag/projects/name-that-color

--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -1,7 +1,7 @@
 .wp-caption {
 	margin-bottom: 1.5em;
 	max-width: 100%;
-	background: #fff;
+	background: $white;
 	max-width: 100%;
 
 	img[class*="wp-image-"] {
