--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
+	background: $white; /* Fallback for when there is no custom background color defined. */
 }
 
 blockquote, q {
@@ -22,7 +22,7 @@ blockquote, q {
 }
 
 hr {
-	border-top: 1px solid $color__border-hr-top;
+	border-top: 1px solid $color_nobel;
 	margin-bottom: 1.5em;
 	margin-top: 1.5em;
 }
