--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -3,28 +3,28 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	border: 1px solid;
-	border-color: $color__border-button;
+	border-color: $color_gray;
 	border-radius: 3px;
-	background: $color__background-button;
+	background: $color_wild_sand;
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: $color__text-input-focus;
+	color: $color_emperor;
 	@include font-size(0.75);
 	line-height: 1.44;
 	padding: .6em 1em .4em;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 
 	&:hover {
-		background-color: $color__background-button-hover;
-		border-color: $color__border-button-hover;
-		color: $color__text-input-focus;
+		background-color: $color_alto;
+		border-color: $color_gray;
+		color: $color_emperor;
 		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
 	}
 
 	&:active,
 	&:focus {
-		background-color: $color__background-button-focus;
-		border-color: $color__border-button-focus;
-		color: $color__text-input-focus;
+		background-color: $color_alto;
+		border-color: $color_gray;
+		color: $color_emperor;
 		box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
 	}
 }
