--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -4,12 +4,12 @@ input[type="url"],
 input[type="password"],
 input[type="search"],
 textarea {
-	color: $color__text-input;
-	border: 1px solid $color__border-input;
+	color: $color_shark;
+	border: 1px solid $color_emperor;
 	border-radius: 3px;
 
 	&:focus {
-		color: $color__text-input-focus;
+		color: $color_emperor;
 	}
 }
 
@@ -37,6 +37,6 @@ label {
 }
 
 output {
-	color: $color__text-input-focus;
+	color: $color_emperor;
 	line-height: 1.44;
 }
