--- a/sass/modules/_accessibility.scss
+++ b/sass/modules/_accessibility.scss
@@ -9,11 +9,11 @@
 	&:hover,
 	&:active,
 	&:focus {
-		background-color: $color__background-screen;
+		background-color: $color_tuatara;
 		border-radius: 3px;
 		box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 		clip: auto !important;
-		color: $color__text-screen;
+		color: $color_jelly_bean;
 		display: block;
 		@include font-size(0.875);
 		font-weight: bold;
