--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -1,6 +1,6 @@
 #navigation {
   position: relative;
-  background-color: $color__background-navigation;
+  background-color: $color_tuatara;
   border: 0;
   border-radius: 0;
   clear: both;
@@ -14,7 +14,7 @@
   z-index: 10;
   ul {
     display: none;
-    background-color: $color__background-navigation;
+    background-color: $color_tuatara;
     list-style: none;
     margin: 0;
     padding-left: 0;
@@ -58,7 +58,7 @@
       a {
         &:hover, &.focus {
           background-color: black;
-          color: #fff;
+          color: $white;
         }
       }
     }
@@ -76,10 +76,10 @@
   .current_page_item > a, .current-menu-item > a, .current_page_ancestor > a {}
   ul > li > a:hover {
     background-color: black;
-    color: #ffb310;
+    color: $color_sun;
   }
   .sub-menu {
-    background-color: #1f1f1f;
+    background-color: $color_mine_shaft;
     border: 1px solid black;
     border-color: transparent;
     border-radius: 0 0 .20em .20em;
