--- a/sass/navigation/_search.scss
+++ b/sass/navigation/_search.scss
@@ -36,7 +36,7 @@
     padding: 0 1em;
     border: none;
     background-color: #f5f5f5;
-    color: #666;
+    color: $color_dove_gray;
     font-size: .8em;
     backface-visibility: none;
     border-radius: 0;
