--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -1,5 +1,5 @@
 .widget {
-	color: $color__link;
+	color: $color_paprika;
 
 	/* Make sure select elements fit in widgets. */
 	select {
@@ -28,8 +28,8 @@
   padding-left: 0;
   li {
     border: 0;
-    border-top: 1px solid #d7d7d7;
-    color: #903;
+    border-top: 1px solid $color_alto;
+    color: $color_paprika;
     font-weight: 400;
     list-style: none;
     padding: 10px 5px;
@@ -44,15 +44,14 @@
 }
 
 .widget-area {
-  /*background-color: #fff;*/
-  border-top: .5em solid #903;
+  border-top: .5em solid $color_paprika;
   margin-bottom: .5em;
   padding: 1em;
   position: relative;
   &:before {
-    border-bottom: 1px solid #e9e9e9;
-    border-left: 1px solid #e9e9e9;
-    border-right: 1px solid #e9e9e9;
+    border-bottom: 1px solid $color_mercury;
+    border-left: 1px solid $color_mercury;
+    border-right: 1px solid $color_mercury;
     content: '';
     height: 100%;
     left: 0;
