--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -1,28 +1,31 @@
-$color__background-body: #fff;
-$color__background-screen: #f1f1f1;
-$color__background-hr: $color__background-body;
-$color__background-button: #f5f5f5;
-$color__background-button-hover: gainsboro;
-$color__background-button-focus: $color__background-button-hover;
-$color__background-pre: whitesmoke;
-$color__background-code: #f9f2f4;
-$color__background-navigation: #353535;
-$color__background-ins: #fff9c0;
+//colors
+// Names generated with http://chir.ag/projects/name-that-color/ where appropriate.
+$white: #fff;
+$color_tuatara: #353535;
+$color_wild_sand: #f5f5f5;
+$color_alto: #d7d7d7;
+$color_soft_peach: #f9f2f4;
+$color_shalimar: #fff9c0;
 
-$color__text-main: #2a2a2a;
-$color__text-screen: #21759b;
-$color__text-input: $color__text-main;
-$color__text-input-focus: #505050;
-$color__link: #903;
-$color__link-visited: #903;
-$color__link-hover: #d23153;
-$color__text-pre: #333333;
-$color__text-code: #c7254e;
+$color_shark: #2a2a2a;
+$color_jelly_bean: #21759b;
+$color_emperor: #505050;
+$color_paprika: #903;
+$color_brick_red: #d23153;
+$color_maroon_flush: #c7254e;
 
-$color__border-hr-top: #b7b7b7;
-$color__border-button: #b0b0b0;
-$color__border-button-hover: #919191;
-$color__border-button-focus: $color__border-button-hover;
-$color__border-input: #ccc;
-$color__border-abbr: #666;
-$color__border-pre: #cccccc;
+$color_nobel: #b7b7b7;
+$color_gray: #919191;
+$color_silver: #ccc;
+$color_dove_gray: #666;
+$color_black: #000;
+$color_navy_blue: #008;
+$color_sun: #ffb310;
+$color_mine_shaft: #1f1f1f;
+$color_seashell: #f1f1f1;
+$color_mercury: #e9e9e9;
+$color_alabaster: #fafafa;
+$color_cod_gray: #1e1e1e;
+$color_silver_chalice: #a9a9a9;
+$color_abbey: #4f5557;
+
