--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://github.com/cronkiteschool/asu_s_wordpress_theme
 Author: Cronkite School IT
 Author URI: https://jrnops.jmc.asu.edu
 Description: An ASU Standards inspired theme based on <code>_s</code>, or <em>underscores</em>.
-Version: 1.1.9
+Version: 1.2.0
 GitHub Theme URI: https://github.com/cronkiteschool/asu_s_wordpress_theme
 GitHub Branch: master
 License: GNU General Public License v2 or later
@@ -323,9 +323,9 @@ pre {
   display: block;
   word-break: break-all;
   word-wrap: break-word;
-  color: #333333;
-  background-color: whitesmoke;
-  border: 1px solid #cccccc;
+  color: #353535;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
   border-radius: 4px;
   font-family: "Courier 10 Pitch", Courier, monospace;
   font-size: 15px;
@@ -453,7 +453,7 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
   border: 1px solid;
-  border-color: #b0b0b0;
+  border-color: #919191;
   border-radius: 3px;
   background: #f5f5f5;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
@@ -468,7 +468,7 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-  background-color: gainsboro;
+  background-color: #d7d7d7;
   border-color: #919191;
   color: #505050;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
@@ -480,7 +480,7 @@ input[type="reset"]:active,
 input[type="reset"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus {
-  background-color: gainsboro;
+  background-color: #d7d7d7;
   border-color: #919191;
   color: #505050;
   box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
@@ -493,7 +493,7 @@ input[type="password"],
 input[type="search"],
 textarea {
   color: #2a2a2a;
-  border: 1px solid #ccc;
+  border: 1px solid #505050;
   border-radius: 3px;
 }
 input[type="text"]:focus,
@@ -765,7 +765,7 @@ a:visited {
   overflow: hidden;
 }
 .screen-reader-text:hover, .screen-reader-text:active, .screen-reader-text:focus {
-  background-color: #f1f1f1;
+  background-color: #353535;
   border-radius: 3px;
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
   clip: auto !important;
@@ -880,8 +880,7 @@ a:visited {
 }
 
 .widget-area {
-  /*background-color: #fff;*/
-  border-top: .5em solid #903;
+  border-top: 0.5em solid #903;
   margin-bottom: .5em;
   padding: 1em;
   position: relative;
